--- a/FBAnket/FBAnket/Info.plist
+++ b/FBAnket/FBAnket/Info.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>GADApplicationIdentifier</key>
-	<string></string>
+	<string>ca-app-pub-7359263265391774~6814163626</string>
 </dict>
 </plist>
